tenants/tenant-acme4/webapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webapp
    tenant: tenant-acme4
  name: webapp
  namespace: tenant-acme4
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
      tenant: tenant-acme4
  template:
    metadata:
      labels:
        app: webapp
        tenant: tenant-acme4
    spec:
      containers:
      - image: nginx:1.27-alpine
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        name: webapp
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
