tenants/tenant-acme4/webapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: tenant-acme4
spec:
  ingressClassName: nginx
  rules:
  - host: webapp.tenant-acme4.local.dev
    http:
      paths:
      - backend:
          service:
            name: webapp-service
            port:
              number: 80
        path: /
        pathType: Prefix
